import React from 'react';
import { render } from '@testing-library/react';

import axe from '../../../utils/axeHelper';
import SkeletonContainer from './SkeletonContainer';
import SkeletonBodyText from '../SkeletonBodyText';

it('renders the component', () => {
  const { container } = render(
    <SkeletonContainer>
      <SkeletonBodyText />
    </SkeletonContainer>,
  );

  expect(container.firstChild).toMatchSnapshot();
});

it('renders the component with an additional class name', () => {
  const { container } = render(
    <SkeletonContainer className="className">
      <SkeletonBodyText />
    </SkeletonContainer>,
  );

  expect(container.firstChild).toMatchSnapshot();
});

it('renders with unique default ids', () => {
  const { container } = render(
    <div>
      <SkeletonContainer testId="first">
        <SkeletonBodyText />
      </SkeletonContainer>
      <SkeletonContainer testId="first">
        <SkeletonBodyText />
      </SkeletonContainer>
    </div>,
  );

  expect(container.firstChild).toMatchSnapshot();
});

it('renders the component with a custom testId', () => {
  const { container } = render(
    <SkeletonContainer testId="someId">
      <SkeletonBodyText />
    </SkeletonContainer>,
  );

  expect(container.firstChild).toMatchSnapshot();
});

it('renders the component with a custom aria label', () => {
  const { container } = render(
    <SkeletonContainer ariaLabel="Custom Aria Label">
      <SkeletonBodyText />
    </SkeletonContainer>,
  );

  expect(container.firstChild).toMatchSnapshot();
});

it('renders the component with a custom width', () => {
  const { container } = render(
    <SkeletonContainer width="50%">
      <SkeletonBodyText />
    </SkeletonContainer>,
  );

  expect(container.firstChild).toMatchSnapshot();
});

it('renders the component with a custom height', () => {
  const { container } = render(
    <SkeletonContainer height="50%">
      <SkeletonBodyText />
    </SkeletonContainer>,
  );

  expect(container.firstChild).toMatchSnapshot();
});

it('renders the component with a custom aspect ratio', () => {
  const { container } = render(
    <SkeletonContainer preserveAspectRatio="xMidYMin slice">
      <SkeletonBodyText />
    </SkeletonContainer>,
  );

  expect(container.firstChild).toMatchSnapshot();
});

it('renders the component with a custom clip id', () => {
  const { container } = render(
    <SkeletonContainer clipId="some-clip-id">
      <SkeletonBodyText />
    </SkeletonContainer>,
  );

  expect(container.firstChild).toMatchSnapshot();
});

it('renders the component with a custom gradient id', () => {
  const { container } = render(
    <SkeletonContainer gradientId="some-gradient-id">
      <SkeletonBodyText />
    </SkeletonContainer>,
  );

  expect(container.firstChild).toMatchSnapshot();
});

it('renders the component with a custom primary color', () => {
  const { container } = render(
    <SkeletonContainer backgroundColor="#ffffff">
      <SkeletonBodyText />
    </SkeletonContainer>,
  );

  expect(container.firstChild).toMatchSnapshot();
});

it('renders the component with a custom primary opacity', () => {
  const { container } = render(
    <SkeletonContainer backgroundOpacity={0}>
      <SkeletonBodyText />
    </SkeletonContainer>,
  );

  expect(container.firstChild).toMatchSnapshot();
});

it('renders the component with a custom secondary color', () => {
  const { container } = render(
    <SkeletonContainer foregroundColor="#ffffff">
      <SkeletonBodyText />
    </SkeletonContainer>,
  );

  expect(container.firstChild).toMatchSnapshot();
});

it('renders the component with a custom secondary opacity', () => {
  const { container } = render(
    <SkeletonContainer foregroundOpacity={0}>
      <SkeletonBodyText />
    </SkeletonContainer>,
  );

  expect(container.firstChild).toMatchSnapshot();
});

it('renders the component without animation', () => {
  const { container } = render(
    <SkeletonContainer animate={false}>
      <SkeletonBodyText />
    </SkeletonContainer>,
  );

  expect(container.firstChild).toMatchSnapshot();
});

it('renders the component with a custom animation speed', () => {
  const { container } = render(
    <SkeletonContainer speed={5}>
      <SkeletonBodyText />
    </SkeletonContainer>,
  );

  expect(container.firstChild).toMatchSnapshot();
});

it('renders the svg with a custom height', () => {
  const { container } = render(
    <SkeletonContainer svgHeight={100}>
      <SkeletonBodyText />
    </SkeletonContainer>,
  );

  expect(container.firstChild).toMatchSnapshot();
});

it('renders the svg with a custom width', () => {
  const { container } = render(
    <SkeletonContainer svgWidth={100}>
      <SkeletonBodyText />
    </SkeletonContainer>,
  );

  expect(container.firstChild).toMatchSnapshot();
});

it('has no a11y issues', async () => {
  const { container } = render(
    <SkeletonContainer>
      <SkeletonBodyText />
    </SkeletonContainer>,
  );
  const results = await axe(container);

  expect(results).toHaveNoViolations();
});
